--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 
       --axis-x: calc(4 * var(--step) - (var(--cell-gap) / 2));
 
+      /* W2 Basis links oben (B) */
       --cube-col: 1;
       --cube-row: 1;
 
@@ -150,14 +151,15 @@
       z-index: 2;
       pointer-events: none;
 
+      /* ✅ Innenschatten im Box-Inneren (Boden) */
       box-shadow:
-        inset 14px 14px 26px rgba(255,255,255,0.14),
-        inset -18px -18px 34px rgba(0,0,0,0.22),
+        inset 18px 18px 34px rgba(255,255,255,0.10),
+        inset -22px -22px 44px rgba(0,0,0,0.28),
         inset 0 0 0 1px rgba(0,0,0,0.12),
-        inset -22px 0 34px rgba(0,0,0,0.30),
-        inset  22px 0 34px rgba(0,0,0,0.30),
-        inset  0 -22px 34px rgba(0,0,0,0.34),
-        inset  0  22px 34px rgba(0,0,0,0.34);
+        inset -26px 0 40px rgba(0,0,0,0.26),
+        inset  26px 0 40px rgba(0,0,0,0.26),
+        inset  0 -26px 40px rgba(0,0,0,0.30),
+        inset  0  26px 40px rgba(0,0,0,0.30);
     }
 
     .ball{
@@ -177,6 +179,9 @@
       pointer-events: none;
     }
 
+    /* =========================================================
+       W2KIP + W1KIP (gespeichert, aber unsichtbar)
+       ========================================================= */
     .pairLayer{
       position:absolute;
       inset:0;
@@ -185,6 +190,20 @@
 
       transform-origin: var(--axis-x) 50%;
       transform: scaleX(var(--pair-scale-x, 0.5));
+
+      /* ✅ im Hintergrund behalten */
+      opacity: 0;
+      visibility: hidden;
+    }
+
+    /* =========================================================
+       W2 FINAL (sichtbar): Q1, Slots: 2E 2F 3G 4G
+       ========================================================= */
+    .w2FinalLayer{
+      position:absolute;
+      inset:0;
+      z-index: 7; /* über Boden, unter Divider */
+      pointer-events:none;
     }
 
     .cubeShadow{
@@ -194,7 +213,6 @@
       border-radius: clamp(10px, 2.2vmin, 18px);
       background: transparent;
       box-sizing: border-box;
-      z-index: 5;
 
       box-shadow:
         var(--cast-x) var(--cast-y) 18px rgba(0,0,0,0.35),
@@ -202,13 +220,21 @@
 
       filter: blur(1px);
     }
-    .cubeShadow.w2{ left: var(--cube-x); top: var(--cube-y); }
-    .cubeShadow.w1{ left: calc(4 * var(--step)); top: calc(1 * var(--step)); }
 
-    .cube{
+    /* Shadows in Basis/KIP (unsichtbar) */
+    .pairLayer .cubeShadow.w2{ left: var(--cube-x); top: var(--cube-y); }
+    .pairLayer .cubeShadow.w1{ left: calc(4 * var(--step)); top: calc(1 * var(--step)); }
+
+    /* Shadow in W2 Final (Q1 = col E, row 2 => left 4*step, top 1*step) */
+    .w2FinalLayer .cubeShadow.w2final{
+      left: calc(4 * var(--step));
+      top:  calc(1 * var(--step));
+    }
+
+    .cube,
+    .cube2,
+    .cubeFinal{
       position:absolute;
-      left: var(--cube-x);
-      top:  var(--cube-y);
       width: calc(3 * var(--cell) + 2 * var(--cell-gap));
       height: calc(3 * var(--cell) + 2 * var(--cell-gap));
       box-sizing: border-box;
@@ -236,35 +262,21 @@
       z-index: 6;
     }
 
-    .cube2{
-      position:absolute;
+    /* W2 Basis (links) */
+    .pairLayer .cube{
+      left: var(--cube-x);
+      top:  var(--cube-y);
+    }
+    /* W1 Basis (rechts) */
+    .pairLayer .cube2{
       left: calc(4 * var(--step));
       top:  calc(1 * var(--step));
-      width: calc(3 * var(--cell) + 2 * var(--cell-gap));
-      height: calc(3 * var(--cell) + 2 * var(--cell-gap));
-      box-sizing: border-box;
+    }
 
-      background:
-        radial-gradient(120% 90% at 15% 15%, var(--cube-wood-gold), transparent 55%),
-        radial-gradient(120% 90% at 25% 25%, var(--cube-wood-warm), transparent 60%),
-        repeating-linear-gradient(
-          20deg,
-          rgba(0,0,0,0.02) 0px,
-          rgba(0,0,0,0.02) 10px,
-          rgba(255,255,255,0.02) 10px,
-          rgba(255,255,255,0.02) 18px
-        ),
-        linear-gradient(135deg, rgba(255,255,255,0.16), rgba(0,0,0,0.08)),
-        linear-gradient(180deg, var(--cube-wood-base), var(--cube-wood-deep));
-
-      border: 4px solid var(--cube-border);
-      border-radius: clamp(10px, 2.2vmin, 18px);
-
-      box-shadow:
-        0 12px 22px rgba(0,0,0,0.28),
-        0 0 0 1px rgba(255,255,255,0.10) inset;
-
-      z-index: 6;
+    /* W2 Final in Q1 */
+    .w2FinalLayer .cubeFinal{
+      left: calc(4 * var(--step));
+      top:  calc(1 * var(--step));
     }
 
     .slot{
@@ -309,7 +321,7 @@
       position: relative;
     }
 
-    /* ✅ Punkt für 6 und 9 (immer unten rechts relativ zur gedrehten Zahl) */
+    /* ✅ Punkt für 6 und 9: als "Satzpunkt" rechts daneben (nicht UNTER der Zahl) */
     .slot .num > span.dot::after{
       content:"";
       position:absolute;
@@ -317,18 +329,22 @@
       height: clamp(3px, 0.55vmin, 6px);
       border-radius: 50%;
       background: #111;
-      right: clamp(2px, 0.55vmin, 5px);
-      bottom: clamp(2px, 0.55vmin, 5px);
+
+      /* rechts NACH der Zahl, auf der "Schreibzeile" */
+      left: 100%;
+      top: 72%;
+      transform: translate(25%, -50%);
+
       box-shadow: 0 1px 0 rgba(255,255,255,0.25);
     }
 
-    /* Leserichtungen */
+    /* Leserichtungen (bleiben wie jetzt – NICHT mehr ändern) */
     .read-south { --num-rot: calc(var(--rotSign) * 0deg); }
     .read-west  { --num-rot: calc(var(--rotSign) * 90deg); }
     .read-east  { --num-rot: calc(var(--rotSign) * -90deg); }
     .read-north { --num-rot: calc(var(--rotSign) * 180deg); }
 
-    /* Slot-Positionen */
+    /* ===== Slot-Positionen (W2KIP/W1KIP) ===== */
     .slot-2b{ left: calc(var(--cube-x) + 0 * var(--step)); top:  calc(var(--cube-y) + 0 * var(--step)); }
     .slot-2c{ left: calc(var(--cube-x) + 1 * var(--step)); top:  calc(var(--cube-y) + 0 * var(--step)); }
     .slot-3d{ left: calc(var(--cube-x) + 2 * var(--step)); top:  calc(var(--cube-y) + 1 * var(--step)); }
@@ -339,6 +355,13 @@
     .slot2-3e{ left: calc(4 * var(--step) + 0 * var(--step)); top: calc(1 * var(--step) + 1 * var(--step)); }
     .slot2-4e{ left: calc(4 * var(--step) + 0 * var(--step)); top: calc(1 * var(--step) + 2 * var(--step)); }
 
+    /* ===== Slot-Positionen (W2 FINAL: 2E 2F 3G 4G) ===== */
+    .w2f-2e{ left: calc(4 * var(--step)); top: calc(1 * var(--step)); }               /* 2E */
+    .w2f-2f{ left: calc(5 * var(--step)); top: calc(1 * var(--step)); }               /* 2F */
+    .w2f-3g{ left: calc(6 * var(--step)); top: calc(2 * var(--step)); }               /* 3G */
+    .w2f-4g{ left: calc(6 * var(--step)); top: calc(3 * var(--step)); }               /* 4G */
+
+    /* ✅ Divider bleibt unverändert (DEINE Werte) */
     .divider-DE-rows2to4{
       position:absolute;
       left: calc(var(--axis-x) - 1px);
@@ -401,7 +424,10 @@
       <div class="ball" aria-label="Kugel"></div>
       <div id="grid" class="grid" aria-label="8×8 Raster"></div>
 
-      <div class="pairLayer" id="pairLayer" aria-label="W2+W1 als Gruppe (KIP)">
+      <!-- =========================
+           W2KIP + W1KIP (unsichtbar, gespeichert)
+           ========================= -->
+      <div class="pairLayer" id="pairLayer" aria-label="W2+W1 als Gruppe (KIP, gespeichert)">
         <div class="cubeShadow w2" aria-hidden="true"></div>
         <div class="cubeShadow w1" aria-hidden="true"></div>
 
@@ -411,7 +437,7 @@
         <!-- W1 (rechts) -->
         <div class="cube2" aria-label="W1 Basis/KIP"></div>
 
-        <!-- ✅ Zeile 2: MUSS vom NORDEN lesbar sein => 180° -->
+        <!-- ✅ Zeile 2: vom NORDEN lesbar -->
         <div class="slot slot-2b read-north" data-slot="S1" aria-label="Slot 2B"><div class="num"><span></span></div></div>
         <div class="slot slot-2c read-north" data-slot="S2" aria-label="Slot 2C"><div class="num"><span></span></div></div>
 
@@ -419,7 +445,7 @@
         <div class="slot slot-3d read-east" data-slot="S3" aria-label="Slot 3D"><div class="num"><span></span></div></div>
         <div class="slot slot-4d read-east" data-slot="S4" aria-label="Slot 4D"><div class="num"><span></span></div></div>
 
-        <!-- ✅ Zeile 2 (W1): ebenfalls NORD lesbar -->
+        <!-- ✅ Zeile 2 (W1): vom NORDEN lesbar -->
         <div class="slot slot2-2f read-north" data-slot="T1" aria-label="Slot 2F"><div class="num"><span></span></div></div>
         <div class="slot slot2-2g read-north" data-slot="T2" aria-label="Slot 2G"><div class="num"><span></span></div></div>
 
@@ -428,6 +454,23 @@
         <div class="slot slot2-4e read-west" data-slot="T4" aria-label="Slot 4E"><div class="num"><span></span></div></div>
       </div>
 
+      <!-- =========================
+           W2 FINAL (sichtbar) in Q1
+           Slots: 2E,2F,3G,4G
+           Zahlen-Ausrichtung bleibt 1:1 wie in W2KIP
+           ========================= -->
+      <div class="w2FinalLayer" id="w2FinalLayer" aria-label="W2 Final (Q1)">
+        <div class="cubeShadow w2final" aria-hidden="true"></div>
+        <div class="cubeFinal" aria-label="W2 Final Fläche"></div>
+
+        <!-- Mapping: W2 Final nutzt S1,S2,S3,S4 (genau die vier W2-Zahlen) -->
+        <div class="slot w2f-2e read-north" data-final="S1" aria-label="W2 Final 2E"><div class="num"><span></span></div></div>
+        <div class="slot w2f-2f read-north" data-final="S2" aria-label="W2 Final 2F"><div class="num"><span></span></div></div>
+        <div class="slot w2f-3g read-east"  data-final="S3" aria-label="W2 Final 3G"><div class="num"><span></span></div></div>
+        <div class="slot w2f-4g read-east"  data-final="S4" aria-label="W2 Final 4G"><div class="num"><span></span></div></div>
+      </div>
+
+      <!-- Divider bleibt oben drüber -->
       <div class="divider-DE-rows2to4" aria-hidden="true"></div>
     </div>
 
@@ -441,8 +484,13 @@
     const grid = document.getElementById("grid");
     const btn = document.getElementById("btnBestuecken");
 
-    const slotEls = Array.from(document.querySelectorAll(".slot"));
+    // Slots in W2KIP/W1KIP (unsichtbar) => Quelle
+    const slotEls = Array.from(document.querySelectorAll(".pairLayer .slot"));
     const slotSpanEls = new Map(slotEls.map(s => [s.dataset.slot, s.querySelector(".num > span")]));
+
+    // Slots in W2 Final => Anzeige
+    const finalSlotEls = Array.from(document.querySelectorAll(".w2FinalLayer .slot"));
+    const finalSpanEls = new Map(finalSlotEls.map(s => [s.dataset.final, s.querySelector(".num > span")]));
 
     function setBoardSquare(){
       const w = Math.round(boardEl.getBoundingClientRect().width);
@@ -493,7 +541,9 @@
     function sleep(ms){ return new Promise(res => setTimeout(res, ms)); }
 
     function clearPops(){
+      // pop auf beiden Ebenen entfernen
       slotEls.forEach(s => s.classList.remove("pop"));
+      finalSlotEls.forEach(s => s.classList.remove("pop"));
     }
 
     function setDot(span, number){
@@ -512,6 +562,19 @@
       return pool.slice(0, count);
     }
 
+    function syncFinalFromKip(){
+      // W2 Final zeigt S1..S4 (W2-Zahlen) exakt 1:1 (inkl. Punkt-Klasse)
+      ["S1","S2","S3","S4"].forEach(k => {
+        const src = slotSpanEls.get(k);
+        const dst = finalSpanEls.get(k);
+        if(!src || !dst) return;
+        dst.textContent = src.textContent;
+
+        // dot-Klasse spiegeln (6/9 Punkt)
+        dst.classList.toggle("dot", src.classList.contains("dot"));
+      });
+    }
+
     function setRandomNumbers(withPop=false){
       const keys = ["S1","S2","S3","S4","T1","T2","T3","T4"];
       const nums = getUniqueRandomNumbers(8, 1, 12);
@@ -524,8 +587,12 @@
         setDot(span, n);
       });
 
+      // Final aktualisieren (nur W2)
+      syncFinalFromKip();
+
       if (withPop){
-        for (const el of slotEls){
+        // Pop-Animation auf Final (sichtbar) + optional auf KIP (unsichtbar)
+        for (const el of finalSlotEls){
           el.classList.remove("pop");
           void el.offsetWidth;
           el.classList.add("pop");
