--- a/index.html
+++ b/index.html
@@ -104,10 +104,6 @@
       --cube-x: calc(var(--cube-col) * var(--step));
       --cube-y: calc(var(--cube-row) * var(--step));
 
-      /* (bleiben drin, aber werden für den äußeren Schatten nicht mehr benutzt) */
-      --cast-x: 18px;
-      --cast-y: 18px;
-
       box-shadow:
         10px 18px 42px rgba(0,0,0,0.55),
         3px 6px 16px rgba(0,0,0,0.35);
@@ -164,83 +160,78 @@
     }
 
     /* =========================================================
-       ✅ NEU: Clip-Fläche für WÜRFE-Schatten (nur im Inneren!)
-       - verhindert Schatten am Außenrahmen
+       ✅ NEU: Clip-Layer fürs Box-Innere (damit am Rahmen NIE Schatten liegt)
+       - Board ist 8×8, die Innenbox beginnt bei 1×step inset rundum
        ========================================================= */
-    .floorClip{
+    .innerClip{
       position:absolute;
-      left: var(--step);
-      top:  var(--step);
-      width: calc(6 * var(--cell) + 5 * var(--cell-gap));
-      height: calc(6 * var(--cell) + 5 * var(--cell-gap));
-      overflow: hidden;
-      z-index: 3;        /* über Boden, unter Würfel */
+      inset:0;
+      z-index: 3;            /* über Boden, unter Würfel/Slots */
       pointer-events:none;
 
-      /* W2 Final steht bei left=4*step, top=1*step
-         Boden beginnt bei left=1*step, top=1*step
-         => innerhalb Boden: x = 3*step, y = 0*step
-      */
-      --cube-in-x: calc(3 * var(--step));
-      --cube-in-y: calc(0 * var(--step));
+      /* clip genau auf die Innenbox: inset = 1× step rundum */
+      clip-path: inset(var(--step) var(--step) var(--step) var(--step));
     }
 
-    /* Schatten-Objekt unter dem Würfel (ins Innere geklippt) */
-    .cubeCastInner{
+    /* =========================================================
+       ✅ Schattenobjekt: exakt auf W2 (2E bis 4G) gelegt
+       - top-left = 2E => left 4*step, top 1*step
+       - Größe = 3×3 => 3*cell + 2*gaps
+       ========================================================= */
+    .w2ShadowPlane{
       position:absolute;
-      left: var(--cube-in-x);
-      top:  var(--cube-in-y);
+      left: calc(4 * var(--step));
+      top:  calc(1 * var(--step));
+
       width: calc(3 * var(--cell) + 2 * var(--cell-gap));
       height: calc(3 * var(--cell) + 2 * var(--cell-gap));
+
       border-radius: clamp(10px, 2.2vmin, 18px);
       background: transparent;
-
-      /* ✅ Schatten nach LINKS + UNTEN (ins Innere), nicht nach rechts außen */
-      box-shadow:
-        -18px 18px 18px rgba(0,0,0,0.34),
-        -10px 10px 10px rgba(0,0,0,0.22);
-
-      filter: blur(1px);
+      pointer-events:none;
     }
 
-    /* ✅ Gleicher Kanten-Schatten links & unten (Kontaktkante) */
-    .cubeCastInner::before,
-    .cubeCastInner::after{
+    /* Schatten nach links + unten (ins Innere) */
+    .w2ShadowPlane::before,
+    .w2ShadowPlane::after{
       content:"";
       position:absolute;
       inset:0;
       border-radius: inherit;
       pointer-events:none;
+      mix-blend-mode: multiply;
     }
 
-    /* Linke Kante -> Schatten nach links (innen) */
-    .cubeCastInner::before{
-      left: 0;
-      top: 0;
-      right: 0;
-      bottom: 0;
+    /* Linke Kante: gleicher „Kanten“-Schatten */
+    .w2ShadowPlane::before{
       background:
         linear-gradient(
           90deg,
-          rgba(0,0,0,0.34),
-          rgba(0,0,0,0.00) 28%
+          rgba(0,0,0,0.36),
+          rgba(0,0,0,0.00) 30%
         );
-      opacity: 0.85;
-      filter: blur(0.6px);
-      mix-blend-mode: multiply;
+      filter: blur(0.7px);
+      opacity: 0.92;
     }
 
-    /* Untere Kante -> Schatten nach unten (innen) */
-    .cubeCastInner::after{
+    /* Untere Kante: gleicher „Kanten“-Schatten */
+    .w2ShadowPlane::after{
       background:
         linear-gradient(
           180deg,
-          rgba(0,0,0,0.00) 72%,
-          rgba(0,0,0,0.34) 100%
+          rgba(0,0,0,0.00) 70%,
+          rgba(0,0,0,0.36) 100%
         );
-      opacity: 0.85;
+      filter: blur(0.7px);
+      opacity: 0.92;
+    }
+
+    /* zusätzlicher weicher Wurf (ebenfalls NUR innen sichtbar, weil .innerClip) */
+    .w2ShadowPlane{
+      box-shadow:
+        -18px 18px 18px rgba(0,0,0,0.34),
+        -10px 10px 10px rgba(0,0,0,0.22);
       filter: blur(0.6px);
-      mix-blend-mode: multiply;
     }
 
     .ball{
@@ -283,13 +274,13 @@
     .w2FinalLayer{
       position:absolute;
       inset:0;
-      z-index: 7; /* über Boden/ClipShadow, unter Divider */
+      z-index: 7; /* über Schatten/Innenclip, unter Divider */
       pointer-events:none;
     }
 
-    /* ✅ WICHTIG: Der alte "Außen"-Schatten darf in W2 FINAL NICHT mehr wirken */
+    /* ✅ Der alte äußere cubeShadow darf in dieser Ansicht NICHT sichtbar sein */
     .w2FinalLayer .cubeShadow{
-      display: none;
+      display:none;
     }
 
     .cubeShadow{
@@ -299,11 +290,9 @@
       border-radius: clamp(10px, 2.2vmin, 18px);
       background: transparent;
       box-sizing: border-box;
-
       box-shadow:
-        var(--cast-x) var(--cast-y) 18px rgba(0,0,0,0.35),
-        calc(var(--cast-x) * 0.55) calc(var(--cast-y) * 0.55) 10px rgba(0,0,0,0.22);
-
+        18px 18px 18px rgba(0,0,0,0.35),
+        10px 10px 10px rgba(0,0,0,0.22);
       filter: blur(1px);
     }
 
@@ -335,8 +324,9 @@
       border: 4px solid var(--cube-border);
       border-radius: clamp(10px, 2.2vmin, 18px);
 
-      /* ✅ Kein "Außenwurf" mehr, weil der jetzt über .floorClip kommt */
+      /* Würfelfläche: nur eigener Körper, Schatten kommt von der ShadowPlane */
       box-shadow:
+        0 12px 22px rgba(0,0,0,0.18),
         0 0 0 1px rgba(255,255,255,0.10) inset;
 
       z-index: 6;
@@ -410,7 +400,6 @@
       border-radius: 50%;
       background: #111;
 
-      /* rechts NACH der Zahl, auf der "Schreibzeile" */
       left: 100%;
       top: 72%;
       transform: translate(25%, -50%);
@@ -441,7 +430,7 @@
     .w2f-3g{ left: calc(6 * var(--step)); top: calc(2 * var(--step)); }               /* 3G */
     .w2f-4g{ left: calc(6 * var(--step)); top: calc(3 * var(--step)); }               /* 4G */
 
-    /* ✅ Divider bleibt inhaltlich gleich, aber wird jetzt UNSICHTBAR */
+    /* ✅ Divider bleibt im DOM, ist aber unsichtbar */
     .divider-DE-rows2to4{
       position:absolute;
       left: calc(var(--axis-x) - 1px);
@@ -456,7 +445,6 @@
       z-index: 9999;
       pointer-events: none;
 
-      /* ✅ UNSICHTBAR in dieser Ansicht */
       opacity: 0;
       visibility: hidden;
     }
@@ -506,9 +494,9 @@
     <div class="board" id="board">
       <div class="floor" aria-hidden="true"></div>
 
-      <!-- ✅ NEU: Schatten-Clip nur fürs Box-Innere -->
-      <div class="floorClip" aria-hidden="true">
-        <div class="cubeCastInner" aria-hidden="true"></div>
+      <!-- ✅ NEU: Schatten nur im Inneren + exakt unter W2 (2E-4G) -->
+      <div class="innerClip" aria-hidden="true">
+        <div class="w2ShadowPlane" aria-hidden="true"></div>
       </div>
 
       <div class="ball" aria-label="Kugel"></div>
@@ -547,21 +535,17 @@
       <!-- =========================
            W2 FINAL (sichtbar) in Q1
            Slots: 2E,2F,3G,4G
-           Zahlen-Ausrichtung bleibt 1:1 wie in W2KIP
            ========================= -->
       <div class="w2FinalLayer" id="w2FinalLayer" aria-label="W2 Final (Q1)">
-        <!-- cubeShadow w2final entfernt/unterdrückt per CSS -->
         <div class="cubeShadow w2final" aria-hidden="true"></div>
         <div class="cubeFinal" aria-label="W2 Final Fläche"></div>
 
-        <!-- Mapping: W2 Final nutzt S1,S2,S3,S4 (genau die vier W2-Zahlen) -->
         <div class="slot w2f-2e read-north" data-final="S1" aria-label="W2 Final 2E"><div class="num"><span></span></div></div>
         <div class="slot w2f-2f read-north" data-final="S2" aria-label="W2 Final 2F"><div class="num"><span></span></div></div>
         <div class="slot w2f-3g read-east"  data-final="S3" aria-label="W2 Final 3G"><div class="num"><span></span></div></div>
         <div class="slot w2f-4g read-east"  data-final="S4" aria-label="W2 Final 4G"><div class="num"><span></span></div></div>
       </div>
 
-      <!-- Divider bleibt im DOM, aber unsichtbar -->
       <div class="divider-DE-rows2to4" aria-hidden="true"></div>
     </div>
 
@@ -632,7 +616,6 @@
     function sleep(ms){ return new Promise(res => setTimeout(res, ms)); }
 
     function clearPops(){
-      // pop auf beiden Ebenen entfernen
       slotEls.forEach(s => s.classList.remove("pop"));
       finalSlotEls.forEach(s => s.classList.remove("pop"));
     }
@@ -654,14 +637,11 @@
     }
 
     function syncFinalFromKip(){
-      // W2 Final zeigt S1..S4 (W2-Zahlen) exakt 1:1 (inkl. Punkt-Klasse)
       ["S1","S2","S3","S4"].forEach(k => {
         const src = slotSpanEls.get(k);
         const dst = finalSpanEls.get(k);
         if(!src || !dst) return;
         dst.textContent = src.textContent;
-
-        // dot-Klasse spiegeln (6/9 Punkt)
         dst.classList.toggle("dot", src.classList.contains("dot"));
       });
     }
@@ -678,11 +658,9 @@
         setDot(span, n);
       });
 
-      // Final aktualisieren (nur W2)
       syncFinalFromKip();
 
       if (withPop){
-        // Pop-Animation auf Final (sichtbar) + optional auf KIP (unsichtbar)
         for (const el of finalSlotEls){
           el.classList.remove("pop");
           void el.offsetWidth;
